Fixed text overflow issues

--- a/common/static/common/styles/studio/_navdrawer.scss
+++ b/common/static/common/styles/studio/_navdrawer.scss
@@ -343,6 +343,8 @@
     line-height: 0;
     position: absolute;
     top: 50%;
+    word-break: normal;
+    overflow-wrap: normal;
     transform: translate(-50%, -50%);
   }
 }
